bindings/ada/plplot_thin.ads


    procedure
    plshade1(a : PL_Float_Array_2D; nx : PLINT; ny : PLINT; defined : Mask_Function_Pointer_Type;
          left : PLFLT; right : PLFLT; bottom : PLFLT; top : PLFLT;
          shade_min : PLFLT; shade_max : PLFLT;
          sh_cmap : PLINT; sh_color : PLFLT; sh_width : PLFLT;
          min_color : PLINT; min_width : PLFLT;
          max_color : PLINT; max_width : PLFLT;
          fill : Fill_Procedure_Pointer_Type; rectangular : PLINT;
          pltr : Transformation_Procedure_Pointer_Type; pltr_data : PL_Pointer);
    pragma Import(C, plshade1, "c_plshade1");


    procedure
    plshades(z : Long_Float_Pointer_Array; nx : PLINT; ny : PLINT; defined : Mask_Function_Pointer_Type;
          xmin : PLFLT; xmax : PLFLT; ymin : PLFLT; ymax : PLFLT;
          clevel : PL_Float_Array; nlevel : PLINT; fill_width : PLFLT;
          cont_color : PLINT; cont_width : PLFLT;
          fill : Fill_Procedure_Pointer_Type; rectangular : PLINT;
          pltr : Transformation_Procedure_Pointer_Type; pltr_data : PL_Pointer);
    pragma Import(C, plshades, "c_plshades");


-- fix this
--    procedure
--    plfshade(PLFLT (*f2eval) ( : PLINT;  : PLINT; PL_Pointer),
--         PL_Pointer f2eval_data,
--         PLFLT (*c2eval) ( : PLINT;  : PLINT; PL_Pointer),
--         PL_Pointer c2eval_data,
--         nx : PLINT; ny : PLINT;
--         left : PLFLT; right : PLFLT; bottom : PLFLT; top : PLFLT;
--         shade_min : PLFLT; shade_max : PLFLT;
--         sh_cmap : PLINT; sh_color : PLFLT; sh_width : PLINT;
--         min_color : PLINT; min_width : PLINT;
--         max_color : PLINT; max_width : PLINT;
--         void (*fill) ( : PLINT;  : PL_Float_Array;  : PL_Float_Array), rectangular : PLINT;
--         void (*pltr) ( : PLFLT;  : PLFLT;  : PL_Float_Array;  : PL_Float_Array; PL_Pointer),
--         PL_Pointer pltr_data);
--    pragma Import(C, plfshade, "plfshade");


    -- Setup a user-provided custom labeling function.

    procedure
    plslabelfunc(label_func : Custom_Label_Procedure_Pointer_Type; label_data : PL_Pointer);
    pragma Import(C, plslabelfunc, "c_plslabelfunc");


    -- Set up lengths of major tick marks.

    procedure
    plsmaj(def : PLFLT; scale : PLFLT);
    pragma Import(C, plsmaj, "c_plsmaj");


    -- Set the memory area to be plotted (with the 'mem' driver)

    procedure
    plsmem(maxx : PLINT; maxy : PLINT; plotmem : PL_Pointer);
    pragma Import(C, plsmem, "c_plsmem");


    -- Set up lengths of minor tick marks.

    procedure
    plsmin(def : PLFLT; scale : PLFLT);
    pragma Import(C, plsmin, "c_plsmin");


    -- Set orientation.  Must be done before calling plinit.

    procedure
    plsori(ori : PLINT);
    pragma Import(C, plsori, "c_plsori");


    -- Set output device parameters.  Usually ignored by the driver.

    procedure
    plspage(xp : PLFLT; yp : PLFLT; xleng : PLINT; yleng : PLINT;
          xoff : PLINT; yoff : PLINT);
    pragma Import(C, plspage, "c_plspage");


    -- Set the colors for color table 0 from a cmap0 file.

    procedure
    plspal0(filename : char_array);
    pragma Import(C, plspal0, "c_plspal0");


    -- Set the colors for color table 1 from a cmap1 file.
    procedure
    plspal1(filename : char_array; interpolate : PLBOOL);
    pragma Import(C, plspal1, "c_plspal1");


    -- Set the pause (on end-of-page) status

    procedure
    plspause(pause : PLINT);
    pragma Import(C, plspause, "c_plspause");


    -- Set stream number.

    procedure
    plsstrm(strm : PLINT);
    pragma Import(C, plsstrm, "c_plsstrm");


    -- Set the number of subwindows in x and y

    procedure
    plssub(nx : PLINT; ny : PLINT);
    pragma Import(C, plssub, "c_plssub");


    -- Set symbol height.

    procedure
    plssym(def : PLFLT; scale : PLFLT);
    pragma Import(C, plssym, "c_plssym");


    -- Initialize PLplot, passing in the windows/page settings.

    procedure
    plstar(nx : PLINT; ny : PLINT);
    pragma Import(C, plstar, "c_plstar");


    -- Initialize PLplot, passing the device name and windows/page settings.

    procedure
    plstart(devname : char_array; nx : PLINT; ny : PLINT);
    pragma Import(C, plstart, "c_plstart");


    --Set the coordinate transform

    procedure
    plstransform(coordinate_transform : Coordinate_Transform_Procedure_Pointer_Type;
        coordinate_transform_data : PL_Pointer);
    pragma Import(C, plstransform, "c_plstransform");


    -- Prints out the same string repeatedly at the n points in world
    -- coordinates given by the x and y arrays.  Supersedes plpoin and
    -- plsymbol for the case where text refers to a unicode glyph either
    -- directly as UTF-8 or indirectly via the standard text escape
    -- sequences allowed for PLplot input strings.

    procedure
    plstring(n : PLINT; x : PL_Float_Array; y : PL_Float_Array; cstring : char_array);
    pragma Import(C, plstring, "c_plstring");


    -- Prints out the same string repeatedly at the n points in world
    -- coordinates given by the x, y, and z arrays.  Supersedes plpoin3
    -- for the case where text refers to a unicode glyph either directly
    -- as UTF-8 or indirectly via the standard text escape sequences
    -- allowed for PLplot input strings.

    procedure
    plstring3(n : PLINT; x : PL_Float_Array; y : PL_Float_Array;
        z : PL_Float_Array; cstring : char_array);
    pragma Import(C, plstring3, "c_plstring3");


    -- Add a point to a stripchart.

    procedure
    plstripa(id : PLINT; pen : PLINT; x : PLFLT; y : PLFLT);
    pragma Import(C, plstripa, "c_plstripa");


    -- Create 1d stripchart

    procedure
    plstripc(id : out PLINT; xspec : char_array; yspec : char_array;
        xmin : PLFLT; xmax : PLFLT; xjump : PLFLT; ymin : PLFLT; ymax : PLFLT;
        xlpos : PLFLT; ylpos : PLFLT;
        y_ascl : PLBOOL; acc : PLBOOL;
        colbox : PLINT; collab : PLINT;
        colline : PL_Integer_Array; styline : PL_Integer_Array; legline : PL_Stripchart_String_Array;
        labx : char_array; laby : char_array; labtop : char_array);
    pragma Import(C, plstripc, "c_plstripc");


    -- Deletes and releases memory used by a stripchart.

    procedure
    plstripd(id : PLINT);
    pragma Import(C, plstripd, "c_plstripd");


    -- plots a 2d image (or a matrix too large for plshade() )

    procedure
    plimagefr(data : Long_Float_Pointer_Array; nx : PLINT; ny : PLINT;
        xmin : PLFLT; xmax : PLFLT; ymin : PLFLT; ymax : PLFLT; zmin : PLFLT; zmax : PLFLT;
        valuemin :PLFLT; valuemax : PLFLT;
        pltr : Transformation_Procedure_Pointer_Type;
        pltr_data : PL_Pointer);
    pragma Import(C, plimagefr, "c_plimagefr");


      -- plots a 2d image (or a matrix too large for plshade() )

    procedure
    plimage(data : Long_Float_Pointer_Array; nx : PLINT; ny : PLINT;
        xmin : PLFLT; xmax : PLFLT; ymin : PLFLT; ymax : PLFLT; zmin : PLFLT; zmax : PLFLT;
        Dxmin : PLFLT; Dxmax : PLFLT; Dymin : PLFLT; Dymax : PLFLT);
    pragma Import(C, plimage, "c_plimage");


    -- Set up a new line style

    procedure
    plstyl(nms : PLINT; mark : PL_Integer_Array; space : PL_Integer_Array);
    pragma Import(C, plstyl, "c_plstyl");


--==================================================================================================
--==================================================================================================
-- Begin inserting definitions and functions for new 3D plotting capability. April 13, 2016



    -- type Function_To_Manipulate_Matrix_A_Type is
    --     access function (p : Real_Matrix; ix, iy : Integer)
    --         return Long_Float;
    -- pragma Convention(C, Function_To_Manipulate_Matrix_A_Type);
    --
    -- type Function_To_Manipulate_Matrix_B_Type is
    --     access function (p : in out Real_Matrix; ix, iy : Integer; z : Long_Float)
    --         return Long_Float;
    -- pragma Convention(C, Function_To_Manipulate_Matrix_B_Type);
    --
    -- type Function_To_Manipulate_Matrix_C_Type is
    --     access function (ix, iy : Integer; p : Real_Matrix) return Long_Float;-- Why not use A form?
    -- pragma Convention(C, Function_To_Manipulate_Matrix_C_Type);
    --
    -- type Procedure_To_Manipulate_Matrix_Type is
    --     access procedure (p : Real_Matrix; nx, ny : Integer; zmin, zmax : out Long_Float);
    -- pragma Convention(C, Procedure_To_Manipulate_Matrix_Type);
    --
    -- type PLf2ops_t is
    --     record
    --         Get    : Function_To_Manipulate_Matrix_A_Type;
    --         Set    : Function_To_Manipulate_Matrix_B_Type;
    --         Add    : Function_To_Manipulate_Matrix_B_Type;
    --         Sub    : Function_To_Manipulate_Matrix_B_Type;
    --         Mul    : Function_To_Manipulate_Matrix_B_Type;
    --         Div    : Function_To_Manipulate_Matrix_B_Type;
    --         Is_Nan : Function_To_Manipulate_Matrix_A_Type;
    --         MinMax : Procedure_To_Manipulate_Matrix_Type;
    --         F2Eval : Function_To_Manipulate_Matrix_C_Type;
    --     end record;
    --
    -- function plf2ops_c_get(p : Real_Matrix; ix, iy : Integer) return Long_Float;
    -- pragma Import(C, plf2ops_c_get, "plf2ops_c_get");
    --
    -- function plf2ops_c_set(p : in out Real_Matrix; ix, iy : Integer; z : Long_Float) return Long_Float;
    -- pragma Import(C, plf2ops_c_set, "plf2ops_c_set");
    --
    -- function plf2ops_c_add(p : in out Real_Matrix; ix, iy : Integer; z : Long_Float) return Long_Float;
    -- pragma Import(C, plf2ops_c_add, "plf2ops_c_add");
    --
    -- function plf2ops_c_sub(p : in out Real_Matrix; ix, iy : Integer; z : Long_Float) return Long_Float;
    -- pragma Import(C, plf2ops_c_sub, "plf2ops_c_sub");
    --
    -- function plf2ops_c_mul(p : in out Real_Matrix; ix, iy : Integer; z : Long_Float) return Long_Float;
    -- pragma Import(C, plf2ops_c_mul, "plf2ops_c_mul");
    --
    -- function plf2ops_c_div(p : in out Real_Matrix; ix, iy : Integer; z : Long_Float) return Long_Float;
    -- pragma Import(C, plf2ops_c_div, "plf2ops_c_div");
    --
    -- function plf2ops_c_isnan(p : Real_Matrix; ix, iy : Integer) return Long_Float;
    -- pragma Import(C, plf2ops_c_isnan, "plf2ops_c_isnan");
    --
    -- procedure plf2ops_c_minmax(p : Real_Matrix; nx, ny : Integer; zmin, zmax : out Long_Float);
    -- pragma Import (C, plf2ops_c_minmax, "plf2ops_c_minmax");
    --
    -- function plf2ops_c_f2eval(ix, iy : Integer; p : Real_Matrix) return Long_Float;
    -- pragma Import(C, plf2ops_c_f2eval, "plf2ops_c_f2eval");
    --






--==================================================================================================
--==================================================================================================


    -- Plots the 3d surface representation of the function z(x, y).

    procedure
    plsurf3d(x : PL_Float_Array; y : PL_Float_Array; z : Long_Float_Pointer_Array;
        nx : PLINT; ny :  PLINT; opt : PLINT; clevel : PL_Float_Array; nlevel : PLINT);
    pragma Import(C, plsurf3d, "c_plsurf3d");


    -- -- Like plsurf3d, but uses an evaluator function to access z data from zp
    --
    -- procedure
    -- plfsurf3d(x : PL_Float_Array; y : PL_Float_Array; zops : PLf2ops_t;
    --     zp : Long_Float_Pointer_Array; nx : PLINT; ny : PLINT; opt : PLINT;
    --     clevel : PL_Float_Array; nlevel : PLINT);
    -- pragma Import(C, plfsurf3d, "plfsurf3d");


    -- Plots the 3-d surface representation of the function z(x, y) with limits on x and y.

    procedure
    plsurf3dl(x : PL_Float_Array; y : PL_Float_Array; z : Long_Float_Pointer_Array;
        nx : PLINT; ny : PLINT; opt : PLINT; clevel : PL_Float_Array; nlevel : PLINT;
        indexxmin : PLINT; indexxmax : PLINT;
        indexymin : PL_Integer_Array; indexymax : PL_Integer_Array);
    pragma Import(C, plsurf3dl, "c_plsurf3dl");


    -- Sets the edges of the viewport to the specified absolute coordinates
